@@ -24,13 +24,17 @@
 package com.synopsys.integration.alert.component.scheduling;
 
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
 
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Component;
 
 import com.synopsys.integration.alert.common.descriptor.config.field.ConfigField;
 import com.synopsys.integration.alert.common.descriptor.config.field.SelectConfigField;
 import com.synopsys.integration.alert.common.descriptor.config.ui.UIConfig;
+import com.synopsys.integration.alert.web.model.FieldModel;
+import com.synopsys.integration.alert.web.model.FieldValueModel;
 
 @Component
 public class SchedulingUIConfig extends UIConfig {
@@ -46,9 +50,33 @@ public class SchedulingUIConfig extends UIConfig {
 
     @Override
     public List<ConfigField> createFields() {
-        final ConfigField digestHour = SelectConfigField.createRequired(KEY_DAILY_DIGEST_HOUR_OF_DAY, "Daily digest hour of day", Arrays.asList("1", "2", "3", "4", "5", "6", "7", "8", "10", "11", "12"));
-        final ConfigField purgeFrequency = SelectConfigField.createRequired(KEY_PURGE_DATA_FREQUENCY_DAYS, "Purge data frequency in days", Arrays.asList("1", "2", "3"));
+        final ConfigField digestHour = SelectConfigField.createRequired(KEY_DAILY_DIGEST_HOUR_OF_DAY, "Daily digest hour of day", List.of("1", "2", "3", "4", "5", "6", "7", "8", "10", "11", "12"), this::validateDigestHourOfDay);
+        final ConfigField purgeFrequency = SelectConfigField.createRequired(KEY_PURGE_DATA_FREQUENCY_DAYS, "Purge data frequency in days", List.of("1", "2", "3"), this::validatePurgeFrequency);
         return Arrays.asList(digestHour, purgeFrequency);
+    }
+
+    private Collection<String> validateDigestHourOfDay(final FieldValueModel fieldToValidate, final FieldModel fieldModel) {
+        final String dailyDigestHourOfDay = fieldToValidate.getValue().orElse(null);
+        if (isNotValid(dailyDigestHourOfDay, 0, 23)) {
+            return List.of("Must be a number between 0 and 23");
+        }
+        return List.of();
+    }
+
+    private Collection<String> validatePurgeFrequency(final FieldValueModel fieldToValidate, final FieldModel fieldModel) {
+        final String purgeDataFrequency = fieldToValidate.getValue().orElse(null);
+        if (isNotValid(purgeDataFrequency, 1, 7)) {
+            return List.of("Must be a number between 1 and 7");
+        }
+        return List.of();
+    }
+
+    private boolean isNotValid(final String actualValue, final Integer minimumAllowedValue, final Integer maximumAllowedValue) {
+        return StringUtils.isBlank(actualValue) || !StringUtils.isNumeric(actualValue) || isOutOfRange(Integer.valueOf(actualValue), minimumAllowedValue, maximumAllowedValue);
+    }
+
+    private boolean isOutOfRange(final Integer number, final Integer minimumAllowedValue, final Integer maximumAllowedValue) {
+        return number < minimumAllowedValue || maximumAllowedValue < number;
     }
 
 }
